Improve schedule UI with time labels, fix dual course deletion, and add save combination feature
- Add custom TimeHeaderView to display hour labels between table rows
- Fix dual course deletion bug: correctly convert to single widget or remove only specific sessions
- Implement save combination feature with name validation
- Update UI translations: "نمایش جدول امتحانات دروس" and "ساخت برنامه بهینه"
- Fix hover highlighting for converted single course widgets
- Improve time column styling and course cell background opacity

--- a/app/translations/en_US.json
+++ b/app/translations/en_US.json
@@ -450,7 +450,7 @@
     "button_no": "No",
     "button_cancel": "Cancel",
     "change_language_title": "Change Language",
-    "change_language_confirmation": "Changing the language will temporarily clear the schedule table. All courses will be restored after the language change.\n\nDo you want to change the language to {lang}?"
+    "change_language_confirmation": "Do you want to change the language to {lang}?"
   },
   "language": {
     "persian": "Persian",
@@ -482,9 +482,9 @@
     "remove": "Remove",
     "save_schedule": "Save Schedule",
     "clear_schedule": "Clear Schedule",
-    "show_exam_page": "Show Exam Page",
+    "show_exam_page": "Show Exam Schedule Table for Courses",
     "add_course": "Add Course",
-    "generate_optimal": "Generate Optimal",
+    "generate_optimal": "Create Optimal Schedule",
     "apply_combo": "Apply Combination",
     "details": "Details"
   },
