feat: comprehensive improvements in i18n, error handling, validation, and UI/UX
- Complete i18n coverage: added missing translations, replaced hardcoded strings
- Improved error messages: user-friendly, language-consistent, no technical jargon
- Fixed conflict resolution: duplicate messages, unknown conflicts, self-conflicts
- Enhanced dual courses: hover effects, deletion logic, styling consistency
- Real-time validation: student number and password fields with visual feedback
- Exam schedule table: non-editable, improved styling, professional copy functionality
- Bug fixes: time header, shadows, borders, language change, UI consistency
- Fixed time header hour 7 positioning (removed hour 7, added hour 19)

#Dual Course (Odd/Even) Improvements:
- Fixed quick click behavior for dual course creation
- Improved dual course hover effect (red border and background on hover)
- Fixed dual course deletion logic (removes only specific course sessions)
- Fixed dual course overflow issue on small windows
- Improved dual course styling consistency with single courses
- Changed 'X' button color to white with red background on hover
- Added red hover background for dual course sections

--- a/app/translations/en_US.json
+++ b/app/translations/en_US.json
@@ -25,7 +25,8 @@
     "ok": "OK",
     "cancel": "Cancel",
     "no_name": "Unnamed",
-    "priority": "Priority"
+    "priority": "Priority",
+    "copy": "Copy"
   },
   "menu": {
     "file": "File",
@@ -396,6 +397,12 @@
     "credentials_required": "Username and password are required. Please enter your Golestan login credentials.",
     "invalid_credentials": "Username or password is incorrect. Please check your login credentials and try again.",
     "golestan_fetch_error": "Error fetching information from Golestan:\n{error}",
+    "ssl_error": "Error establishing secure connection to Golestan system.\n\nYour VPN/proxy might be active. Please disable your VPN/proxy and try again.",
+    "connection_error": "Error connecting to Golestan system.\n\nPlease check your internet connection and make sure you are connected to the internet.",
+    "timeout_error": "Request timeout while waiting for response from Golestan system.\n\nPlease try again. The Golestan server might be busy at the moment.",
+    "captcha_failed": "Failed to login to Golestan system.\n\nPlease check your username and password and try again.",
+    "no_courses_error": "No courses were fetched from Golestan system.\n\nPlease make sure your login credentials are correct and try again.",
+    "unknown_error": "Error fetching information from Golestan system.\n\nPlease check your internet connection and try again.",
     "courses_added": "{count} courses added",
     "courses_added_all": "All {count} courses added successfully!",
     "courses_conflict": "{count} courses not added due to conflict:",
@@ -579,5 +586,67 @@
     "success_message": "Golestan login information saved successfully. This information is only stored on this device.",
     "save_error_title": "Error",
     "save_error_message": "Error saving login information. Please try again."
+  },
+  "hardcoded_texts": {
+    "user_added_courses": "User Added Courses",
+    "unknown": "Unknown",
+    "copied": "Copied",
+    "deleted": "Deleted",
+    "apply": "Apply",
+    "close": "Close",
+    "even_week_short": "E",
+    "odd_week_short": "O",
+    "even_week": "Even",
+    "odd_week": "Odd",
+    "even_week_full": "Even Week",
+    "odd_week_full": "Odd Week",
+    "faculty_group_instructors": "Faculty Group Instructors",
+    "error_generic": "Error",
+    "error_table_init": "Failed to initialize schedule table",
+    "error_combo_load": "Failed to load combination",
+    "error_schedule_clear": "Failed to clear schedule table",
+    "error_course_place": "Failed to place course",
+    "error_cell_enter": "Failed to handle cell enter event",
+    "error_cell_exit": "Failed to handle cell exit event",
+    "error_pulse_start": "Failed to start pulse animation",
+    "error_pulse_stop": "Failed to stop pulse animation",
+    "error_pulse": "Failed to pulse animation",
+    "error_info_window": "Failed to show detailed info window",
+    "error_exam_window": "Failed to show exam schedule window",
+    "error_resize": "Failed to handle resize event",
+    "error_search_clear": "Failed to clear search box",
+    "error_course_add": "Failed to add course",
+    "error_course_edit": "Failed to edit course",
+    "error_course_delete": "Failed to remove course",
+    "error_combinations": "Failed to generate all combinations",
+    "error_greedy_schedule": "Failed to generate balanced schedule",
+    "error_alternative_schedule": "Failed to generate alternative schedule",
+    "error_info_display": "Failed to show detailed info",
+    "error_exam_display": "Failed to show exam schedule",
+    "error_user_data_save": "Failed to save user data",
+    "error_user_data_load": "Failed to load user data",
+    "error_stats_test": "Failed to run test on stats widget",
+    "error_profile_display": "Error displaying student profile",
+    "error_course_select": "Error detecting selected course. Please try again.",
+    "error_course_select_unexpected": "Unexpected error when selecting course",
+    "error_backup_load": "Failed to load latest backup",
+    "combination": "Combination",
+    "select_course_first": "Please select a course from the list first.",
+    "course_not_found": "Selected course not found.",
+    "course_not_editable": "Default courses cannot be edited. Only custom courses can be edited.",
+    "course_edited": "Edited",
+    "select_course_dialog_title": "Select Course",
+    "delete_combo_title": "Delete Combination",
+    "delete_combo_confirm": "Are you sure you want to delete combination \"{combo_name}\"?",
+    "clear_all_title": "Clear All",
+    "clear_all_confirm": "Are you sure you want to remove all {count} courses from the list?",
+    "remove_from_list": "Remove from List",
+    "no_results": "No combinations available to display.",
+    "days_distance_score": "Days: {days} | Distance: {empty:.1f}h | Score: {score:.1f}",
+    "no_search_results": "No courses matched your search",
+    "select_major_placeholder": "Please select a major",
+    "no_courses_for_major": "No courses found for this major",
+    "system_error": "System Error",
+    "enter_name": "Please enter a name"
   }
 }
