--- a/app/translations/fa_IR.json
+++ b/app/translations/fa_IR.json
@@ -25,7 +25,8 @@
     "ok": "تأیید",
     "cancel": "انصراف",
     "no_name": "بدون نام",
-    "priority": "اولویت"
+    "priority": "اولویت",
+    "copy": "کپی"
   },
   "menu": {
     "file": "فایل",
@@ -396,6 +397,12 @@
     "credentials_required": "نام کاربری و رمز عبور الزامی است. لطفاً اطلاعات ورود به گلستان را وارد کنید.",
     "invalid_credentials": "نام کاربری یا رمز عبور اشتباه است. لطفاً اطلاعات ورود خود را بررسی کنید و دوباره تلاش کنید.",
     "golestan_fetch_error": "خطا در دریافت اطلاعات از گلستان:\n{error}",
+    "ssl_error": "خطا در برقراری اتصال امن به سامانه گلستان.\n\nاحتمالاً فیلترشکن شما فعال است. لطفاً فیلترشکن را خاموش کنید و دوباره تلاش کنید.",
+    "connection_error": "خطا در اتصال به سامانه گلستان.\n\nلطفاً اتصال اینترنت خود را بررسی کنید و مطمئن شوید که به اینترنت متصل هستید.",
+    "timeout_error": "زمان انتظار برای دریافت پاسخ از سامانه گلستان به پایان رسید.\n\nلطفاً دوباره تلاش کنید. ممکن است سرور گلستان در حال حاضر شلوغ باشد.",
+    "captcha_failed": "ورود به سامانه گلستان ناموفق بود.\n\nلطفاً نام کاربری و رمز عبور خود را بررسی کرده و دوباره تلاش کنید.",
+    "no_courses_error": "هیچ درسی از سامانه گلستان دریافت نشد.\n\nلطفاً مطمئن شوید که اطلاعات ورود شما صحیح است و دوباره تلاش کنید.",
+    "unknown_error": "خطا در دریافت اطلاعات از سامانه گلستان.\n\nلطفاً اتصال اینترنت خود را بررسی کرده و دوباره تلاش کنید.",
     "courses_added": "{count} درس اضافه شد",
     "courses_added_all": "تمام {count} درس با موفقیت اضافه شد!",
     "courses_conflict": "{count} درس به دلیل تداخل اضافه نشد:",
@@ -579,5 +586,67 @@
     "success_message": "اطلاعات ورود گلستان با موفقیت ذخیره شد. این اطلاعات فقط روی این دستگاه نگهداری می‌شود.",
     "save_error_title": "خطا",
     "save_error_message": "خطا در ذخیره اطلاعات ورود. لطفاً دوباره تلاش کنید."
+  },
+  "hardcoded_texts": {
+    "user_added_courses": "دروس اضافه‌شده توسط کاربر",
+    "unknown": "نامشخص",
+    "copied": "کپی شد",
+    "deleted": "حذف شد",
+    "apply": "اعمال",
+    "close": "بستن",
+    "even_week_short": "ز",
+    "odd_week_short": "ف",
+    "even_week": "زوج",
+    "odd_week": "فرد",
+    "even_week_full": "هفته زوج",
+    "odd_week_full": "هفته فرد",
+    "faculty_group_instructors": "اساتيد گروه آموزشي",
+    "error_generic": "خطا",
+    "error_table_init": "امکان ایجاد جدول زمان‌بندی وجود ندارد",
+    "error_combo_load": "امکان بارگذاری ترکیب وجود ندارد",
+    "error_schedule_clear": "امکان پاک کردن جدول زمان‌بندی وجود ندارد",
+    "error_course_place": "امکان قرار دادن درس وجود ندارد",
+    "error_cell_enter": "امکان مدیریت ورود به سلول وجود ندارد",
+    "error_cell_exit": "امکان مدیریت خروج از سلول وجود ندارد",
+    "error_pulse_start": "امکان شروع انیمیشن پولس وجود ندارد",
+    "error_pulse_stop": "امکان متوقف کردن انیمیشن پولس وجود ندارد",
+    "error_pulse": "امکان انیمیشن پولس وجود ندارد",
+    "error_info_window": "امکان نمایش پنجره اطلاعات دقیق وجود ندارد",
+    "error_exam_window": "امکان نمایش پنجره زمان‌بندی امتحانات وجود ندارد",
+    "error_resize": "امکان مدیریت تغییر اندازه وجود ندارد",
+    "error_search_clear": "امکان پاک کردن جستجو وجود ندارد",
+    "error_course_add": "امکان اضافه کردن درس وجود ندارد",
+    "error_course_edit": "امکان ویرایش درس وجود ندارد",
+    "error_course_delete": "امکان حذف درس وجود ندارد",
+    "error_combinations": "امکان ایجاد تمام ترکیبات وجود ندارد",
+    "error_greedy_schedule": "امکان ایجاد برنامه زمانی متعادل وجود ندارد",
+    "error_alternative_schedule": "امکان ایجاد برنامه زمانی جایگزین وجود ندارد",
+    "error_info_display": "امکان نمایش اطلاعات دقیق وجود ندارد",
+    "error_exam_display": "امکان نمایش برنامه زمانی امتحانات وجود ندارد",
+    "error_user_data_save": "امکان ذخیره داده‌های کاربر وجود ندارد",
+    "error_user_data_load": "امکان بارگذاری داده‌های کاربر وجود ندارد",
+    "error_stats_test": "امکان اجرای تست بر روی ویجت آمار وجود ندارد",
+    "error_profile_display": "خطا در نمایش پروفایل دانشجو",
+    "error_course_select": "خطا در تشخیص درس انتخابی. لطفا دوباره تلاش کنید.",
+    "error_course_select_unexpected": "خطای غیرمنتظره در هنگام انتخاب درس",
+    "error_backup_load": "امکان بارگذاری آخرین پشتیبان وجود ندارد",
+    "combination": "ترکیب",
+    "select_course_first": "لطفا ابتدا درسی را از لیست انتخاب کنید.",
+    "course_not_found": "درس انتخابی یافت نشد.",
+    "course_not_editable": "دروس پیش‌فرض قابل ویرایش نیستند. فقط دروس سفارشی را می‌توان ویرایش کرد.",
+    "course_edited": "ویرایش شد",
+    "select_course_dialog_title": "انتخاب درس",
+    "delete_combo_title": "حذف ترکیب",
+    "delete_combo_confirm": "آیا مطمئن هستید که می‌خواهید ترکیب \"{combo_name}\" را حذف کنید؟",
+    "clear_all_title": "پاک کردن همه",
+    "clear_all_confirm": "آیا مطمئن هستید که می‌خواهید همه {count} درس را از لیست حذف کنید؟",
+    "remove_from_list": "حذف از لیست",
+    "no_results": "هیچ ترکیبی برای نمایش وجود ندارد.",
+    "days_distance_score": "روزها: {days} | فاصله: {empty:.1f}h | امتیاز: {score:.1f}",
+    "no_search_results": "هیچ درسی با این جستجو یافت نشد",
+    "select_major_placeholder": "لطفاً یک رشته انتخاب کنید",
+    "no_courses_for_major": "درسی برای این رشته یافت نشد",
+    "system_error": "خطای سیستمی",
+    "enter_name": "لطفاً نامی وارد کنید"
   }
 }
